# Rediska

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: task-template.md
.github/workflows/: code_checks.yaml  linux.yaml
.zed/: debug.json  tasks.json
proto/collections/: common.proto  element_kind.proto  list.proto
proto/object/: object.proto
proto/primitives/: bool.proto  float.proto  int.proto  string.proto
proto/v1/collections/: common.proto  element_kind.proto  list.proto
proto/v1/object/: object.proto
proto/v1/primitives/: bool.proto  float.proto  int.proto  string.proto
rediska/: CMakeLists.txt  main.cpp
rediska/cache/: BaseCacheConfig.hpp  CMakeLists.txt  CachePolicy.hpp  constants.hpp  tmp.cpp  types.hpp
rediska/cache/lru/: LRU.cpp  LRU.hpp  LRUConfig.hpp
rediska/common/: CMakeLists.txt  DSValueType.hpp  Message.hpp  OptionalRef.hpp  enums.hpp  tmp.cpp  types.hpp  utils.hpp
rediska/data-structures/: AbstractDataStructure.hpp  CMakeLists.txt  DSReturnCode.hpp  enums.hpp  types.hpp
rediska/data-structures/impl/: ListDataStructure.cpp  ListDataStructure.hpp
rediska/frontend/: CMakeLists.txt  CallData.cpp  FloatService.cpp  IntService.cpp  ListService.cpp  ObjectService.cpp  RequestManager.hpp  SkeletonService.cpp  StringService.cpp  bool_service.cpp  int_service.cpp  server.hpp  tmp.cpp
rediska/worker/: CMakeLists.txt  tmp.cpp
scripts/: send_test_requests.py
tests/: CMakeLists.txt  README.md  example_test.cpp  t.cpp
